--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <base href="https://krsln.github.io/NgLootBox/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script type="text/javascript"
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDc4sLu9IyvR4X9vyn8EANTznzHQzeGn9o"></script>
+          src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
   <style>
     body {
       background: #EBEBEB !important;
